--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^5.40.0",
     "@awesome-cordova-plugins/core": "^5.40.0",
+    "@awesome-cordova-plugins/email-composer": "^5.41.0",
+    "@awesome-cordova-plugins/file": "^5.41.0",
     "@awesome-cordova-plugins/in-app-browser": "^5.40.0",
     "@capacitor/android": "3.4.3",
     "@capacitor/app": "1.1.0",
@@ -31,6 +33,8 @@
     "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/storage-angular": "^3.0.6",
+    "cordova-plugin-email-composer": "^0.10.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
